# hipermap

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  cache.c  cache.h  common.h  domain_hash.h  domain_to_lower.h  flake.nix  go.mod  go.sum  install-deps.sh  main.c  static_domain_set.cpp  static_domain_set.h  static_domain_set_find.c  static_domain_set_internal.h  static_map.cpp  static_map.h  static_uint64_map.c  static_uint64_map.h  static_uint64_set.c  static_uint64_set.h  test_cache.c
gocache/: cache.go  cache_test.go
gosm/: binding.go  binding_test.go
gosm/testdata/fuzz/FuzzDeserialize/: 2303cb9a94dc85dd
gosm/testdata/fuzz/FuzzFind/: 0cae48677671550c  113ec252dfd25899  6df48391daabec22  932f382c6aa08246  9f5506a4742a9bdd
gostaticdomainset/: binding_bench_test.go  binding_cgo.go  binding_pure.go  binding_test.go  collision_test.go  cut_last_domain_label_test.go  domain_hash_test.go  edge_cases_test.go  errors.go  fuzz_find_test.go  naive_domain_set.go  pure_compat_test.go  sample-domains.txt  static_domain_set_cgo.go  static_domain_set_pure.go
gostaticdomainset/cmd/collide/: main.go
gostaticdomainset/cmd/gen_hash_vals/: main.go
gostaticdomainset/cmd/popular/: main.go
gostaticdomainset/cmd/sds-compile/: main.go
gostaticdomainset/cmd/verify/: main.go
gostaticuint64map/: binding.go  binding_test.go
gostaticuint64set/: binding.go  binding_test.go
gostaticuint64set/testdata/fuzz/FuzzFind/: 48989929a3acddfd  6b17c5910362096f  87cdf486749565f1  ac180e1614ff94e2  f257716f9ed16f77
puregostaticdomainset/: README.md  static_domain_set.go
tools/: bench_domains.cpp  bench_lower.cpp  static_map_benchmark.c  test_cache.c
tools/domainshyperscan/: CMakeLists.txt  domain_map_db.c  domain_map_db.h  linked_str_list.c  linked_str_list.h  main.c
